<resources>
    <string name="app_name">FeedMe!</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Favorites</string>
    <string name="title_login">Login</string>
    <string name="title_recipe">Recipe</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register_short">Register</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="calories">Calories:</string>
    <string name="fat">Fat:</string>
    <string name="carbs">Carbs:</string>
    <string name="protein">Protein:</string>
    <string name="search">Search</string>
    <string name="search_menu">« Search for recipes!</string>
    <string name="add_review">Add Your Review</string>
    <string name="prompt_username">Username</string>
    <string name="register_prompt"><u>Don\'t have an account? Register!</u></string>
    <string name="login_prompt"><u>Already have an account? Login!</u></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="send_review">Send Review</string>
    <string name="review_title">Review Title</string>
    <string name="review_text">Review text</string>
    <string name="search_menu_alt">Click here to filter!</string>
    <string name="add_favorite">Add favorite</string>
</resources>